--- a/kadai-html.html
+++ b/kadai-html.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>HTML/CSSでWebページ作成</title>
+        <link rel="stylesheet" href="kadai-css.css">
     </head>
     <body>
         <header>
-        <p>ここはヘッダーです</p>
+        <div>ここはヘッダーです</div>
 
         </header>
         <div id="wrapper">
@@ -39,7 +40,7 @@
         <footer>
             <div id="footer_navi">
 
-                <p>ここはフッターです</p>
+                <div>ここはフッターです</div>
 
         </footer>
     </body>
